<resources>
    <string name="app_name">Find Movie</string>

    <string name="error_message">We have errors when try to load data</string>

    <string name="empty_movies">None movies where found, try to type another keywords</string>

    <string name="detail">Detail </string>
    <string name="description">Description: </string>
    <string name="movie_detail">Movie Detail</string>
    <string name="share">Share </string>
    <string name="release_year">Release year: </string>
    <string name="movie_status">Movie Status: </string>
    <string name="producer">Producer: </string>

    <string name="share_hint">Please watch this movie: </string>
    <string name="share_via">share via: </string>

    <string name="ipsum">Mussum Ipsum, cacilds vidis litro abertis. Quem manda na minha terra sou euzis! Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Suco de cevadiss deixa as pessoas mais interessantis. Manduma pindureta quium dia nois paga. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Per aumento de cachacis, eu reclamis. Mé faiz elementum girarzis, nisi eros vermeio.</string>
</resources>
